# headphone-manager

./: README.md  meson.build
data/: headphone-manager.service.in  meson.build  org.adishatz.HeadphoneManager.gschema.xml
debian/: changelog  control  postinst  prerm
src/: alsa.c  alsa.h  bluetooth.c  bluetooth.h  events.c  events.h  headphone-manager.c  headphone-manager.h  main.c  meson.build  mpris.c  mpris.h  utils.h
